--- a/index.css
+++ b/index.css
@@ -193,3 +193,21 @@ footer {
     padding: 1.5rem;
   }
 }
+
+footer {
+  width: 100%;
+  text-align: left;
+  padding: 1rem
+  font-size: 0.9rem;
+  color: #222;
+  margin-top: 1rem;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+a:hover {
+  border-bottom: 1px solid #999;
+}
