--- a/index.css
+++ b/index.css
@@ -173,16 +173,14 @@ footer a:hover {
   }
 
   .essay-text h2 {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
+    line-height: 1.15;
   }
 }
 
 @media (max-width: 480px) {
-  .essay-text {
-    padding: 1.2rem;
-  }
-
   .essay-text h2 {
-    font-size: 1.2rem;
+    font-size: 1.45rem;
+    line-height: 1.15;
   }
 }
