--- a/styles.css
+++ b/styles.css
@@ -208,19 +208,10 @@ figure img {
   color: #333;
 }
 
-/* Poems should not inherit wide article padding on desktop */
-
-article:has(.poem) {
-  padding: 3rem 6rem;
-}
-
 /* -------------------------- Poem (Desktop) -------------------------- */
 
-.poem {
-  max-width: 700px;
-  margin: 2.5rem auto;
-  padding: 0 1rem;
-  text-align: left;
+.poem-article {
+  padding: 3rem 6rem;
 }
 
 /* -------------------------- Mobile Full-Width Overrides -------------------------- */
