--- a/index.css
+++ b/index.css
@@ -165,6 +165,8 @@ footer a:hover {
 
   .essay-text {
     padding: 1.5rem;
+    font-size: 1.05rem;
+    font-weight: 500;
     text-align: left; /* NOT centered */
   }
 
@@ -173,7 +175,8 @@ footer a:hover {
   }
 
   .essay-text h2 {
-    font-size: 1.7rem;
+    font-size: 1.9rem;
+    font-weight: 500;
     line-height: 1.15;
   }
 }
@@ -181,6 +184,7 @@ footer a:hover {
 @media (max-width: 480px) {
   .essay-text h2 {
     font-size: 1.45rem;
+    font-weight: 500;
     line-height: 1.15;
   }
 }
